--- a/app/src/main/res/layout/activity_explore_hub.xml
+++ b/app/src/main/res/layout/activity_explore_hub.xml
@@ -1,117 +1,145 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.core.widget.NestedScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#EFF1F4"
-    android:fillViewport="true"
-    android:overScrollMode="never"
-    android:scrollbars="none"
+    android:orientation="vertical"
     tools:context=".explorehub.ExploreHubActivity">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <ImageView
+        android:id="@+id/ivExploreHubBackButon"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/_10sdp"
+        android:layout_marginTop="@dimen/_10sdp"
+        android:layout_marginBottom="@dimen/_10sdp"
+        android:src="@drawable/ic_back_arrow" />
+
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:paddingBottom="@dimen/_10sdp">
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:background="#EFF1F4"
+        android:fillViewport="true"
+        android:overScrollMode="never"
+        android:scrollbars="none">
 
-
-        <ImageView
-            android:id="@+id/ivCvExploreHubShowImage"
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@drawable/round_rect"
-            android:src="@drawable/img_demo_1"
-            android:scaleType="fitCenter"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:layout_height="match_parent"
+            android:paddingBottom="@dimen/_10sdp">
 
-        <ImageView
-            android:id="@+id/ivExploreHubBackButon"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_back_arrow"
-            android:layout_marginStart="@dimen/_10sdp"
-            app:layout_constraintTop_toTopOf="@id/ivCvExploreHubShowImage"
-           android:layout_marginTop="@dimen/_30sdp"
-            app:layout_constraintStart_toStartOf="parent"/>
+            <LinearLayout
+                android:id="@+id/llCvExploreHubShowImage"
+                android:layout_width="wrap_content"
+                android:layout_height="@dimen/_200sdp"
+                android:background="@drawable/round_rect"
+                android:gravity="center"
+                android:padding="@dimen/_10sdp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
+
+                <ImageView
+                    android:id="@+id/ivCvExploreHubShowImage"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/_150sdp"
+                    android:src="@drawable/img_demo_1" />
+
+            </LinearLayout>
+
+            <com.app.hubbdesign.custom.MyCustomTextView
+                android:id="@+id/tvExploreHubForOneHeading"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/_15sdp"
+                android:layout_marginTop="@dimen/_15sdp"
+                android:layout_marginEnd="@dimen/_15sdp"
+                android:fontFamily="@font/gill_sans_bold"
+                android:text="Hubb for One"
+                android:textColor="@color/featuredLocation_blue"
+                android:textSize="@dimen/_16sdp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/llCvExploreHubShowImage" />
+
+            <View
+                android:id="@+id/lineExploreHubForOne"
+                android:layout_width="@dimen/_30sdp"
+                android:layout_height="3dp"
+                android:layout_marginTop="@dimen/_3sdp"
+                android:background="@color/featuredLocation_blue"
+                app:layout_constraintStart_toStartOf="@id/tvExploreHubForOneHeading"
+                app:layout_constraintTop_toBottomOf="@id/tvExploreHubForOneHeading" />
 
 
-        <com.app.hubbdesign.custom.MyCustomTextView
-            android:id="@+id/tvExploreHubForOneHeading"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/_15sdp"
-            android:layout_marginTop="@dimen/_15sdp"
-            android:layout_marginEnd="@dimen/_15sdp"
-            android:fontFamily="@font/gill_sans_bold"
-            android:text="Hubb for One"
-            android:textColor="@color/featuredLocation_blue"
-            android:textSize="@dimen/_16sdp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/ivCvExploreHubShowImage" />
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rvExploreHubCardViewList"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/_5sdp"
+                android:layout_marginTop="@dimen/_10sdp"
+                android:layout_marginEnd="@dimen/_5sdp"
+                android:layout_marginBottom="@dimen/_20sdp"
+                android:orientation="horizontal"
+                android:overScrollMode="never"
+                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+                app:layout_constraintBottom_toTopOf="@id/tvExploreHubAboutHeading"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/tvExploreHubForOneHeading"
+                app:reverseLayout="false"
+                app:spanCount="3"
+                tools:listitem="@layout/item_list_explore_hub_cardview_list" />
 
-        <View
-            android:id="@+id/lineExploreHubForOne"
-            android:layout_width="@dimen/_30sdp"
-            android:layout_height="3dp"
-            android:layout_marginTop="@dimen/_3sdp"
-            android:background="@color/featuredLocation_blue"
-            app:layout_constraintStart_toStartOf="@id/tvExploreHubForOneHeading"
-            app:layout_constraintTop_toBottomOf="@id/tvExploreHubForOneHeading" />
+            <com.app.hubbdesign.custom.MyCustomTextView
+                android:id="@+id/tvExploreHubAboutHeading"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/_15sdp"
+                android:layout_marginTop="@dimen/_10sdp"
+                android:text="About"
+                android:textColor="@color/black"
+                android:textSize="@dimen/_14sdp"
+                app:fontFamily="@font/gill_sans_bold"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/rvExploreHubCardViewList" />
+
+            <com.app.hubbdesign.custom.MyCustomTextView
+                android:id="@+id/tvExploreHubAboutDescription"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/_15sdp"
+                android:layout_marginTop="@dimen/_8sdp"
+                android:layout_marginEnd="@dimen/_15sdp"
+                android:layout_marginBottom="@dimen/_10sdp"
+                android:fontFamily="@font/gill_sans"
+                android:text="@string/description"
+                android:textColor="#8a8a8a"
+                android:textSize="@dimen/_14sdp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/tvExploreHubAboutHeading" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.core.widget.NestedScrollView>
 
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rvExploreHubCardViewList"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/_5sdp"
-            android:layout_marginTop="@dimen/_10sdp"
-            android:layout_marginEnd="@dimen/_5sdp"
-            android:layout_marginBottom="@dimen/_20sdp"
-            android:orientation="horizontal"
-            android:overScrollMode="never"
-            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-            app:layout_constraintBottom_toTopOf="@id/tvExploreHubAboutHeading"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tvExploreHubForOneHeading"
-            app:reverseLayout="false"
-            app:spanCount="3"
-            tools:listitem="@layout/item_list_explore_hub_cardview_list" />
+    <com.app.hubbdesign.custom.MyCustomTextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/_30sdp"
+        android:layout_marginEnd="@dimen/_30sdp"
+        android:layout_marginBottom="@dimen/_10sdp"
+        android:background="@drawable/ic_rounded_white_text_view"
+        android:backgroundTint="@color/featuredLocation_blue"
+        android:gravity="center"
+        android:text="Search for a Hubb"
+        android:textColor="@color/white"
+        android:textSize="@dimen/_14sdp"
+        app:setTypeFace="@string/myriadPro_regular" />
 
-        <com.app.hubbdesign.custom.MyCustomTextView
-            android:id="@+id/tvExploreHubAboutHeading"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/_15sdp"
-            android:layout_marginTop="@dimen/_10sdp"
-            android:text="About"
-            android:textColor="@color/black"
-            android:textSize="@dimen/_14sdp"
-            app:fontFamily="@font/gill_sans_bold"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/rvExploreHubCardViewList" />
-
-        <com.app.hubbdesign.custom.MyCustomTextView
-            android:id="@+id/tvExploreHubAboutDescription"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/_15sdp"
-            android:layout_marginTop="@dimen/_8sdp"
-            android:layout_marginEnd="@dimen/_15sdp"
-            android:layout_marginBottom="@dimen/_10sdp"
-            android:text="@string/description"
-            android:textColor="#8a8a8a"
-            android:textSize="@dimen/_14sdp"
-            android:fontFamily="@font/gill_sans"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tvExploreHubAboutHeading" />
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-</androidx.core.widget.NestedScrollView>
+</LinearLayout>
