--- a/app/src/main/res/drawable/round_rect_shadow.xml
+++ b/app/src/main/res/drawable/round_rect_shadow.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape android:shape="rectangle" xmlns:android="http://schemas.android.com/apk/res/android">
 <solid android:color="@color/white"/>
-    <corners android:bottomLeftRadius="@dimen/_15sdp"
-        android:bottomRightRadius="@dimen/_15sdp"/>
+    <corners
+        android:radius="@dimen/_15sdp"/>
     <stroke android:width="0.5dp"
-        android:color="@color/white"/>
+        android:color="@color/black"/>
+    <item android:name="android:shadowColor">#000000</item>
+    <item android:name="android:shadowRadius">5</item>
 
 </shape>
