--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,8 +13,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/_50sdp"
-        tools:context=".MainActivity">
+        android:layout_marginBottom="@dimen/_50sdp">
 
         <ImageView
             android:id="@+id/ivFrgHomeHubbIc"
