--- a/app/src/main/res/layout/item_list_previous_search.xml
+++ b/app/src/main/res/layout/item_list_previous_search.xml
@@ -1,64 +1,65 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="wrap_content">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cvRvPreviousSearchImage"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        app:cardCornerRadius="@dimen/_10sdp"
-        android:layout_marginTop="@dimen/_3sdp"
         android:layout_marginStart="@dimen/_5sdp"
+        android:layout_marginTop="@dimen/_3sdp"
         android:layout_marginBottom="@dimen/_2sdp"
-        app:layout_constraintTop_toTopOf="parent"
+        app:cardCornerRadius="@dimen/_10sdp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
         <ImageView
             android:id="@+id/ivRvRvPreviousSearchImage"
             android:layout_width="@dimen/_45sdp"
             android:layout_height="@dimen/_45sdp"
             android:padding="@dimen/_10sdp"
-            android:src="@drawable/ic_baseline_location_on_24"
-            android:scaleType="centerCrop"/>
+            android:scaleType="centerCrop"
+            android:src="@drawable/ic_baseline_location_on_24" />
     </androidx.cardview.widget.CardView>
+
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        app:layout_constraintTop_toTopOf="@id/cvRvPreviousSearchImage"
         app:layout_constraintBottom_toBottomOf="@id/cvRvPreviousSearchImage"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/cvRvPreviousSearchImage"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:layout_constraintTop_toTopOf="@id/cvRvPreviousSearchImage">
 
 
+        <com.app.hubbdesign.custom.MyCustomTextView
+            android:id="@+id/tvRvPreviousSearchName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/_10sdp"
+            android:layout_marginEnd="@dimen/_3sdp"
+            android:ellipsize="end"
+            android:fontFamily="@font/gill_sans_bold"
+            android:maxLines="1"
+            android:text="Waterloo, London, UK"
+            android:textColor="@color/black"
+            android:textSize="@dimen/_12sdp" />
 
-    <com.app.hubbdesign.custom.MyCustomTextView
-        android:id="@+id/tvRvPreviousSearchName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:maxLines="1"
-        android:ellipsize="end"
-        android:layout_marginStart="@dimen/_10sdp"
-        android:layout_marginEnd="@dimen/_3sdp"
-        android:text="Waterloo, London, UK"
-        android:textSize="@dimen/_12sdp"
-        android:textColor="@color/black"
-       android:fontFamily="@font/gill_sans_bold"/>
-
-    <com.app.hubbdesign.custom.MyCustomTextView
-        android:id="@+id/tvRvPreviousSearchDate"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/_10sdp"
-       android:fontFamily="@font/gill_sans"
-        android:text="Oct 14, 2021"
-        android:maxLines="1"
-        android:ellipsize="end"
-        android:layout_marginEnd="@dimen/_3sdp"
-        android:textColor="@color/black"
-        android:textSize="@dimen/_10sdp" />
+        <com.app.hubbdesign.custom.MyCustomTextView
+            android:id="@+id/tvRvPreviousSearchDate"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/_10sdp"
+            android:layout_marginEnd="@dimen/_3sdp"
+            android:ellipsize="end"
+            android:fontFamily="@font/gill_sans"
+            android:maxLines="1"
+            android:text="Oct 14, 2021"
+            android:textColor="@color/black"
+            android:textSize="@dimen/_10sdp" />
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
