--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -15,4 +15,42 @@
         <item name="android:focusable">false</item>
         <item name="android:cursorVisible">false</item>
     </style>
+
+    <style name="add_card_edit_text">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColor">#545454</item>
+        <item name="android:textColorHint">#545454</item>
+        <item name="android:fontFamily">@font/gill_sans</item>
+        <item name="android:textSize">@dimen/_12sdp</item>
+        <item name="android:backgroundTint">#8c8c8c</item>
+        <item name="android:paddingStart">@dimen/_10sdp</item>
+        <item name="android:layout_marginStart">@dimen/_15sdp</item>
+        <item name="android:layout_marginEnd">@dimen/_15sdp</item>
+    </style>
+
+    <style name="login_edit_text">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColor">#545454</item>
+        <item name="android:textSize">@dimen/_12sdp</item>
+        <item name="android:textColorHint">#545454</item>
+        <item name="android:layout_marginStart">@dimen/_15sdp</item>
+        <item name="android:layout_marginEnd">@dimen/_15sdp</item>
+        <item name="android:fontFamily">@font/gill_sans</item>
+        <item name="android:backgroundTint">#8c8c8c</item>
+        <item name="android:layout_marginTop">@dimen/_15sdp</item>
+    </style>
+
+    <style name="signup_second_edit_text">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColorHint">#545454</item>
+        <item name="android:textColor">#545454</item>
+        <item name="android:fontFamily">@font/gill_sans</item>
+        <item name="android:layout_marginStart">@dimen/_15sdp</item>
+        <item name="android:layout_marginTop">@dimen/_15sdp</item>
+        <item name="android:layout_marginEnd">@dimen/_15sdp</item>
+        <item name="android:backgroundTint">#8c8c8c</item>
+    </style>
 </resources>
