--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -66,17 +66,6 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/etLoginEmail" />
 
-            <com.app.hubbdesign.custom.MyCustomTextView
-                android:id="@+id/tvLoginForgotPassword"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="@dimen/_10sdp"
-                android:fontFamily="@font/gill_sans"
-                android:text="Forgot Password?"
-                android:textColor="@color/featuredLocation_blue"
-                android:textSize="@dimen/_12sdp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/etLoginPassword" />
 
             <com.app.hubbdesign.custom.MyCustomTextView
                 android:id="@+id/tvLoginLoginButton"
@@ -93,7 +82,7 @@
                 android:backgroundTint="@color/featuredLocation_blue"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/tvLoginForgotPassword"
+                app:layout_constraintTop_toBottomOf="@id/etLoginPassword"
                 app:setTypeFace="@string/myriadPro_regular" />
 
             <com.app.hubbdesign.custom.MyCustomTextView
